# ex-rates

./: README.md  ex_rates_clnt.py  ex_rates_svc.py
.github/workflows/: linux-install-test.yml  linux-workflow-cpp-client.yml  linux-workflow-py-client.yml  linux.yml
client/cpp/: CMakeLists.txt
client/cpp/src/: fx_rates.cpp  fx_rates.h  main.cpp
server/: ex_rates_svc.py
